test(unit): fix unit test